@@ -1,7 +1,7 @@
 use strict;
 use warnings;
 use Test::Tester;
-use Test::More tests => 2;
+use Test::More tests => 3;
 use Test::Script;
 
 script_runs 't/bin/print.pl';
@@ -41,7 +41,7 @@ subtest 'stdout' => sub {
         script_stdout_unlike qr{XXXX};
       }, {
         ok => 1,
-        name => 'stdout matches',
+        name => 'stdout does not match',
       },
     );
     
@@ -53,7 +53,63 @@ subtest 'stdout' => sub {
         script_stdout_unlike qr{tandard Ou};
       }, {
         ok => 0,
-        name => 'stdout matches',
+        name => 'stdout does not match',
+      },
+    );
+    
+    note $r->{diag};    
+  };
+
+};
+
+subtest 'stderr' => sub {
+  plan tests => 4;
+
+  subtest 'like' => sub {
+
+    check_test( sub {
+        script_stderr_like qr{tandard Er};
+      }, {
+        ok => 1,
+        name => 'stderr matches',
+      },
+    );
+    
+  };
+
+  subtest 'not like' => sub {
+
+    my(undef, $r) = check_test( sub {
+        script_stderr_like qr{XXXX};
+      }, {
+        ok => 0,
+        name => 'stderr matches',
+      },
+    );
+
+    note $r->{diag};    
+    
+  };
+
+  subtest 'unlike' => sub {
+
+    check_test( sub {
+        script_stderr_unlike qr{XXXX};
+      }, {
+        ok => 1,
+        name => 'stderr does not match',
+      },
+    );
+    
+  };
+
+  subtest 'not unlike' => sub {
+
+    my(undef, $r) = check_test( sub {
+        script_stderr_unlike qr{tandard Er};
+      }, {
+        ok => 0,
+        name => 'stderr does not match',
       },
     );
     
